should be running, no prob now

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "task1-routing",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -17,5 +16,14 @@
     "mongoose": "^5.9.18",
     "nodemon": "^2.0.4",
     "react": "^16.13.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PaoVal/fun-times.git"
+  },
+  "bugs": {
+    "url": "https://github.com/PaoVal/fun-times/issues"
+  },
+  "homepage": "https://github.com/PaoVal/fun-times#readme",
+  "description": ""
 }
