--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +14,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "mongoose": "^5.9.18",
-    "nodemon": "^2.0.4",
-    "react": "^16.13.1"
+    "mongoose": "^5.9.18"
   },
   "repository": {
     "type": "git",
